# mdma

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  build.rs  package-lock.json  package.json  tailwind.config.js
migrations/: 1_schema.sql  2_generations.sql  3_discord.sql  4_functions.sql  5_ban_cancel.sql  6_remove_platform_column.sql  7_add_email_templates.sql
src/: admin.rs  auth.rs  components.rs  discord.rs  err_responses.rs  icons.rs  main.rs  send_email.rs  webconnex.rs
src/admin/: bulk_update.rs  discord_audit.rs  generations.rs  mod.rs  users.rs
src/admin/config/: emails.rs  mod.rs
src/admin/members/: cancel_ban.rs  create_member.rs  details.rs  mod.rs  new_payment.rs  search.rs
src/admin/payments/: mod.rs  search.rs
src/db/: members.rs  mod.rs  payments.rs
src/donorbox/: auth.rs  mod.rs  new_donation.rs
src/webconnex/: auth.rs  db_create_user.rs  db_insert_transaction.rs  mod.rs  new_member.rs  recurring_payment_success.rs  redirect.rs  request_payload.rs  verify.rs
templates/: admin.html  base.layout.html  home.html
templates/admin/: bulk_update.html  generations.html  new_payment_response.html  user_add_payment.html  user_details.html  users_list.html
