[package]
name = "mdma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.1"
hmac = "0.12.1"
jsonwebtoken = "9.2.0"
oauth2 = "4.4.2"
reqwest = { version = "0.11.22", features = ["json"] }
rust_decimal = { version = "1.33.1", features = ["serde-float"] }
serde = "1.0.193"
sha2 = "0.10.8"
shuttle-axum = { version = "0.34.1", default-features = false, features = [
    "axum-0-7",
] }
shuttle-runtime = "0.34.1"
shuttle-secrets = "0.34.1"
shuttle-shared-db = { version = "0.34.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "rust_decimal", "time", "uuid"] }
time = { version = "0.3.30", features = ["serde"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "fs"] }
tracing = "0.1.40"
