[package]
name = "mdma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["multipart"] }
axum-extra = { version = "0.9.1", features = ["cookie"] }
csv = "1.3.0"
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = "9.2.0"
maud = { version = "0.26.0", features = ["axum"] }
oauth2 = "4.4.2"
reqwest = { version = "0.12.2", features = ["json"] }
rust_decimal = { version = "1.33.1", features = ["serde-float"] }
sea-query = { version = "0.30.7", features = ["with-rust_decimal"] }
sea-query-binder = { version = "0.5.0", features = [
    "sqlx-postgres",
    "with-rust_decimal",
] }
serde = "1.0.193"
serde-inline-default = "0.2.0"
serde_json = "1.0.120"
serenity = { version = "0.12.2", features = ["interactions_endpoint"] }
sha2 = "0.10.8"
shuttle-axum = { version = "0.46.0" }
shuttle-runtime = "0.46.0"
shuttle-shared-db = { version = "0.46.0", features = [
    "postgres",
    "sqlx-native-tls",
] }
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "rust_decimal",
    "time",
    "uuid",
] }
time = { version = "0.3.30", features = ["serde"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "fs"] }
tracing = "0.1.40"
