[package]
name = "mdma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "4.0.0"
axum = { version = "0.8.1", features = ["multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
csv = "1.3.0"
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.15", features = ["tokio1-native-tls"] }
maud = { version = "0.27.0", features = ["axum"] }
oauth2 = "4.4.2"
reqwest = { version = "0.12.15", features = ["json"] }
rust_decimal = { version = "1.37.0", features = ["serde-float"] }
sea-query = { version = "0.32.3", features = ["with-rust_decimal"] }
sea-query-binder = { version = "0.7.0", features = [
    "sqlx-postgres",
    "with-rust_decimal",
] }
serde = "1.0.219"
serde-inline-default = "0.2.3"
serde_json = "1.0.140"
serenity = { version = "0.12.2", features = ["interactions_endpoint"] }
sha2 = "0.10.8"
shuttle-axum = { version = "0.53.0" }
shuttle-runtime = "0.53.0"
shuttle-shared-db = { version = "0.53.0", features = [
    "postgres",
    "sqlx-native-tls",
] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "rust_decimal",
    "time",
    "uuid",
] }
time = { version = "0.3.40", features = ["serde"] }
tinytemplate = "1.2.1"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
tracing = "0.1.40"
uuid = { version = "1.16.0", features = ["v4"] }
